Refactor: 남은 수동 구현을 표준 API로 정리